--- a/Index.html
+++ b/Index.html
@@ -51,6 +51,7 @@ Starts: July 20, 2050
 <footer> 
 Contact Us 
 <p>Have questions or want to get involved? Email us!</p> 
+  ©Harbor Light Community Center
 </footer> 
 </font> 
 </body>
